fix: add prevent unwanted scrolling on mobile hack

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -96,6 +96,12 @@
     /* border: 1px solid rgba(255, 255, 255, 0.3);   */
   }
 
+  /* Workaround to disable unwanted scrolling on mobile and browsers simulating mobile screens */
+  /* e.preventDefault() doesn't always work / is ignored */
+  .lock-screen {
+    touch-action: pan-y pinch-zoom;
+  }
+
   /* Carousel */
   .carousel-content {
     display: flex;
